# kaggle

./: .gitignore  README.md
titanic/: pyproject.toml  template.ipynb
