[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Alex Gawrilow <gawrilow.alex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
rope = "^0.18.0"
flake8 = "^3.9.1"
ipykernel = "^5.5.3"
kaggle = "^1.5.12"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
